--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -15,16 +15,12 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <title>Ming's Diner</title>
-  </head>
-  <body>
-    <!-- about us -->
-    <!-- menu -->
-    <!-- address -->
-    <!-- contact -->
+    <title>About Us</title>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a href="" class="navbar-brand"
+        <a href="./index.html" class="navbar-brand"
           ><img
             src="./img/favicon.ico"
             alt=""
@@ -48,7 +44,7 @@
               <a href="#" class="nav-link" aria-current="page">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Us</a>
+              <a class="nav-link active" href="./about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -62,9 +58,12 @@
                 Contact Us
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li class="dropdown-item">(555) 555-5555</li>
-                <li class="dropdown-item">123 2nd Ave</li>
-                <li class="dropdown-item">Townville, CA</li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
               </ul>
             </li>
           </ul>
@@ -82,5 +81,6 @@
         </div>
       </div>
     </nav>
-  </body>
+    <h2>About Us</h2>
+</body>
 </html>
