--- a/about.html
+++ b/about.html
@@ -58,11 +58,12 @@
                 Contact Us
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
+                <li class="dropdown-item">(555) 555-5555</li>
+                <li class="dropdown-item">123 2nd Ave</li>
+                <li class="dropdown-item">Townville, CA</li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <hr class="dropdown-divider" />
+                  <a class="dropdown-item" href="./contact.html">Message Us</a>
                 </li>
               </ul>
             </li>
