--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -16,16 +16,12 @@
       crossorigin="anonymous"
     ></script>
     <title>About Us</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="./index.html" class="navbar-brand"
-          ><img
-            src="./img/favicon.ico"
-            alt=""
-            width="30"
-            height="24"
+          ><img src="./img/favicon.ico" alt="" width="30" height="24"
         /></a>
         <button
           class="navbar-toggler"
@@ -83,5 +79,5 @@
       </div>
     </nav>
     <h2>About Us</h2>
-</body>
+  </body>
 </html>
