--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Contact Us</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="" class="navbar-brand"
@@ -79,6 +79,38 @@
       </div>
     </nav>
 
-    
-</body>
+    <header class="text-center">
+      <h1 class="display-4 mt-4"><u>Contact Us</u></h1>
+    </header>
+    <main>
+      <div class="container">
+        <form class="form">
+          <div class="mb-3">
+            <label for="emailInput" class="form-label">Email Address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="emailInput"
+              placeholder="name@example.com"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="nameInput" class="form-label">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nameInput"
+              placeholder="John Doe"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="textInput" class="form-label">Message</label>
+            <textarea id="textInput" rows="6" class="form-control"></textarea>
+          </div>
+          <button class="btn btn-success" id="contact">Send</button>
+        </form>
+      </div>
+    </main>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
