--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a href="" class="navbar-brand"
+        <a href="./index.html" class="navbar-brand"
           ><img src="./img/favicon.ico" alt="" width="30" height="24"
         /></a>
         <button
