--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="./style/style.css">
     <title>Contact Us</title>
   </head>
   <body>
@@ -80,7 +81,7 @@
     </nav>
 
     <header class="text-center">
-      <h1 class="display-4 mt-4"><u>Contact Us</u></h1>
+      <h1 class="display-4 mt-4">Contact Us</h1>
     </header>
     <main>
       <div class="container">
