--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="./style/style.css">
     <title>Ming's Diner</title>
   </head>
   <body>
@@ -83,7 +84,7 @@
       </div>
     </nav>
     <header class="text-center">
-      <h1 class="display-4 mt-4">Ming's Diner</h1>
+      <h1 class="display-4 mt-4"><b>Ming's Diner</b></h1>
     </header>
     <main>
       <div class="container-sm p-5">
