--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="#" class="nav-link" aria-current="page">Menu</a>
+              <a href="./menu.html" class="nav-link" aria-current="page">Menu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="./about.html">About Us</a>
