--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="#" class="nav-link" aria-current="page">Menu</a>
+              <a href="./menu.html" class="nav-link" aria-current="page">Menu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
                 href="#"
                 id="navbarDropdown"
                 role="button"
