--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -15,17 +15,12 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Ming's Diner</title>
-  </head>
-  <body>
-    <!-- about us -->
-    <!-- menu -->
-    <!-- address -->
-    <!-- contact -->
+  <title>Menu</title>
+</head>
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a href="" class="navbar-brand"
+        <a href="./index.html" class="navbar-brand"
           ><img src="./img/favicon.ico" alt="" width="30" height="24"
         /></a>
         <button
@@ -42,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="./menu.html" class="nav-link" aria-current="page">Menu</a>
+              <a href="#" class="nav-link active" aria-current="page">Menu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About Us</a>
@@ -83,63 +78,6 @@
         </div>
       </div>
     </nav>
-    <header class="text-center">
-      <h1 class="display-4 mt-4"><b>Ming's Diner</b></h1>
-    </header>
-    <main>
-      <div class="container-sm p-5">
-        <div
-          id="carouselExampleIndicators"
-          class="carousel carousel-dark slide"
-          data-bs-ride="carousel"
-          data-bs-interval="3000"
-        >
-          <ol class="carousel-indicators">
-            <li
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active"
-            ></li>
-            <li
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="1"
-            ></li>
-            <li
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="2"
-            ></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./img/dish.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="./img/potSticker.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="./img/noods.jpg" class="d-block w-100" alt="..." />
-            </div>
-          </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleIndicators"
-            role="button"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleIndicators"
-            role="button"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </a>
-        </div>
-      </div>
-    </main>
-  </body>
+  
+</body>
 </html>
