--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -15,9 +15,10 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-  <title>Menu</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./style/style.css" />
+    <title>Menu</title>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="./index.html" class="navbar-brand"
@@ -78,6 +79,67 @@
         </div>
       </div>
     </nav>
-  
-</body>
+    <header class="text-center">
+      <h1 class="display-4 mt-4 mb-4">Menu</h1>
+    </header>
+    <main>
+      <div class="container">
+        <table class="table table-striped table-dark">
+          <thead>
+            <tr>
+              <th>Dish</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lemon Chicken</td>
+              <td>$8.00</td>
+            </tr>
+            <tr>
+              <td>Sweet & Sour Pork</td>
+              <td>$8.00</td>
+            </tr>
+            <tr>
+              <td>Chow Mein</td>
+              <td>$6.00</td>
+            </tr>
+            <tr>
+              <td>Chicken Fried Rice</td>
+              <td>$4.00</td>
+            </tr>
+            <tr>
+              <td>Pork Fried Rice</td>
+              <td>$4.00</td>
+            </tr>
+            <tr>
+              <td>Pot Stickers</td>
+              <td>$7.00</td>
+            </tr>
+            <tr>
+              <td>Foil Chicken</td>
+              <td>$7.00</td>
+            </tr>
+            <tr>
+              <td>Combo Plate 1</td>
+              <td>$12.00</td>
+            </tr>
+            <tr>
+              <td>Combo Plate 2</td>
+              <td>$12.00</td>
+            </tr>
+            <tr>
+              <td>Combo Plate 3</td>
+              <td>$12.00</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <footer>
+        <div class="text-center">
+          <img width="25%" height="25%" src="./img/dragon.png" alt="..." class="img-fluid" />
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
