--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Ming's Diner</title>
   </head>
   <body>
@@ -42,7 +42,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="./menu.html" class="nav-link" aria-current="page">Menu</a>
+              <a href="./menu.html" class="nav-link" aria-current="page"
+                >Menu</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About Us</a>
@@ -140,6 +142,21 @@
           </a>
         </div>
       </div>
+      <section>
+        <div class="container">
+          <h1 class="display-6">Our Restaurant</h1>
+          <hr>
+          <p class="overview">
+            Here at Ming's Diner we believe that the customer is always right. Just come into our 
+            wonderful Chinese restaurant and you <i>will</i> have an eating experience like none other. 
+            We have all of your Chinese buffet favorites, or you can order from our ale-cart menu if 
+            that better suites your needs. And all praise be to our wonderful
+            web developer <b>Phil Fernandez</b>. Without him, and his outstanding web programing skills
+            none of this would be possible. Have a Mingeriffic day!
+          </p>
+          <hr class="bottom">
+        </div>
+      </section>
     </main>
   </body>
 </html>
