--- a/menu.html
+++ b/menu.html
@@ -135,11 +135,15 @@
           </tbody>
         </table>
       </div>
-      <footer>
-        <div class="text-center">
-          <img width="25%" height="25%" src="./img/dragon.png" alt="..." class="img-fluid" />
-        </div>
-      </footer>
+      <div class="text-center">
+        <img
+          width="25%"
+          height="25%"
+          src="./img/dragon.png"
+          alt="..."
+          class="img-fluid"
+        />
+      </div>
     </main>
   </body>
 </html>
