new font author

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Contact Us</title>
   </head>
   <body>
@@ -38,7 +38,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="./menu.html" class="nav-link" aria-current="page">Menu</a>
+              <a href="./menu.html" class="nav-link" aria-current="page"
+                >Menu</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">Best Sellers</a>
@@ -112,19 +114,19 @@
         </form>
       </div>
     </main>
-      <footer id="footer" class="text-center">
-        <img
-          width="10%"
-          height="10%"
-          src="./img/dragon.png"
-          alt="..."
-          class="img-fluid"
-        />
-        <p>
-          © Ming's Diner 2021 <br />
-          <span id="author">Developed with ♥ by <b>Phil Fernandez</b></span>
-        </p>
-      </footer>
+    <footer id="footer" class="text-center">
+      <img
+        width="10%"
+        height="10%"
+        src="./img/dragon.png"
+        alt="..."
+        class="img-fluid"
+      />
+      <p>
+        © Ming's Diner 2021 <br />
+        <span id="author">Developed with ♥ by <b>Phil Fernandez</b></span>
+      </p>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
