--- a/index.html
+++ b/index.html
@@ -170,7 +170,16 @@
                 him, and his outstanding web programing skills none of this
                 would be possible. Have a Mingeriffic day!
               </p>
+              <div class="text-center">
+                <a
+                  target="_blank"
+                  class="btn btn-dark btn-lg"
+                  href="https://www.facebook.com/PandaExpress"
+                  >Visit us on Facebook</a
+                >
+              </div>
               <hr class="bottom" />
+              <!-- <button class="btn btn-dark btn-lg"><a href=""></a></button> -->
             </div>
           </section>
         </main>
